# amplifier-bundle-idd

./: .gitignore  IDD-SPEC-AUDIT-CHECKLIST.md  README.md  amplifier-idd-spec.docx  bundle.md  pyproject.toml  pyrightconfig.json
agents/: idd-composer.md  idd-reviewer.md  idd-spec-expert.md
behaviors/: idd-core.yaml
context/: idd-awareness.md
context/knowledge-base/: COMPOSITION-RULES.md  DECOMPOSITION-TEST.md  FIVE-PRIMITIVES.md  RECIPE-COMPILATION.md
context/philosophy/: IDD-PHILOSOPHY.md  THREE-LAYERS.md
context/protocols/: IDD-REVIEW-CHECKLIST.md
docs/: EVALUATION.md  IDD-SPEC-AUDIT-CHECKLIST.md  IDD-VS-SUPERPOWERS.md  idd-story.html
modes/: decompose.md  ground.md
modules/hooks-idd-confirmation/: pyproject.toml
modules/hooks-idd-confirmation/amplifier_module_hooks_idd_confirmation/: __init__.py
modules/hooks-idd-events/: pyproject.toml
modules/hooks-idd-events/amplifier_module_hooks_idd_events/: __init__.py
modules/hooks-idd-grammar-inject/: pyproject.toml
modules/hooks-idd-grammar-inject/amplifier_module_hooks_idd_grammar_inject/: __init__.py
modules/hooks-idd-memory-bridge/: pyproject.toml
modules/hooks-idd-memory-bridge/amplifier_module_hooks_idd_memory_bridge/: __init__.py
modules/hooks-idd-reporter/: pyproject.toml
modules/hooks-idd-reporter/amplifier_module_hooks_idd_reporter/: __init__.py
modules/orchestrator-idd/: pyproject.toml
modules/orchestrator-idd/amplifier_module_orchestrator_idd/: __init__.py  grammar.py  parser.py
modules/tool-idd/: pyproject.toml
modules/tool-idd/amplifier_module_tool_idd/: __init__.py  compiler.py  parser.py
recipes/: idd-audit.yaml  idd-decompose.yaml  idd-full-cycle.yaml  idd-informed-full-cycle.yaml  idd-superpowers-full-cycle.yaml  idd-teach.yaml
recipes/examples/: onboarding-redesign.md
skills/idd-composition-rules/: SKILL.md
skills/idd-decomposition-test/: SKILL.md
skills/idd-five-primitives/: SKILL.md
skills/idd-philosophy/: SKILL.md
skills/idd-recipe-compilation/: SKILL.md
skills/idd-review/: SKILL.md
skills/idd-review/references/: anti-patterns.md
tests/: conftest.py  helpers.py  test_compiler.py  test_grammar.py  test_hooks.py  test_orchestrator.py  test_parser.py  test_tool_idd.py
