[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-module-orchestrator-idd"
version = "0.1.0"
description = "IDD orchestrator - wraps inner orchestrator with Layer 1-2 decomposition and Layer 2-1 reporting"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.entry-points."amplifier.modules"]
orchestrator-idd = "amplifier_module_orchestrator_idd:mount"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_orchestrator_idd"]
